Added data augmentation

--- a/model_fit.ipynb
+++ b/model_fit.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -76,9 +76,9 @@
    ],
    "source": [
     "image_size=224\n",
-    "data_generator = ImageDataGenerator(preprocess_input)\n",
+    "data_generator_with_aug = ImageDataGenerator(preprocess_input,horizontal_flip=True,height_shift_range=0.2,width_shift_range=0.2)\n",
     "\n",
-    "train_generator = data_generator.flow_from_directory(directory='./input/dogs-gone-sideways/images/train',\n",
+    "train_generator = data_generator_with_aug.flow_from_directory(directory='./input/dogs-gone-sideways/images/train',\n",
     "                                                     target_size=(image_size,image_size),\n",
     "                                                     batch_size=10,\n",
     "                                                     class_mode='categorical')\n",
@@ -89,27 +89,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/prateek/vpy3.6/lib/python3.6/site-packages/keras_preprocessing/image/image_data_generator.py:716: UserWarning: This ImageDataGenerator specifies `featurewise_center`, but it hasn't been fit on any training data. Fit it first by calling `.fit(numpy_data)`.\n",
-      "  warnings.warn('This ImageDataGenerator specifies '\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22/22 [==============================] - 64s 3s/step - loss: 0.5803 - accuracy: 0.7091 - val_loss: 0.2752 - val_accuracy: 0.8750\n"
+      "Epoch 1/3\n",
+      "22/22 [==============================] - 46s 2s/step - loss: 0.1627 - accuracy: 0.9364 - val_loss: 0.1995 - val_accuracy: 0.9375\n",
+      "Epoch 2/3\n",
+      "22/22 [==============================] - 48s 2s/step - loss: 0.1023 - accuracy: 0.9818 - val_loss: 0.1604 - val_accuracy: 0.9375\n",
+      "Epoch 3/3\n",
+      "22/22 [==============================] - 48s 2s/step - loss: 0.1054 - accuracy: 0.9727 - val_loss: 0.2031 - val_accuracy: 0.8750\n"
      ]
     }
    ],
    "source": [
-    "fit_stats = model.fit_generator(train_generator,steps_per_epoch=22,validation_data=val_generator,validation_steps=1)"
+    "fit_stats = model.fit_generator(train_generator,\n",
+    "                                steps_per_epoch=22,\n",
+    "                                epochs=3,\n",
+    "                                validation_data=val_generator,\n",
+    "                                validation_steps=1)"
    ]
   },
   {
